base game almost done and future gamemodes soon to be added

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ button {
   font-weight: bold;
   color: aliceblue;
 }
-.options {
+.options, .gamemodes {
   display: grid;
   gap: 13px;
   grid-template-columns: 
